# logex

./: CHANGELOG.md  Cargo.toml  README.md  REQUIREMENTS.md  ReadME.md  build-linux-glibc217.sh  build.bat  build.ps1  build.rs
.github/workflows/: ci.yml  release.yml
docs/: backlog.md
src/: analyzer.rs  cli.rs  config.rs  db.rs  error.rs  executor.rs  exporter.rs  filters.rs  formatter.rs  handlers.rs  lib.rs  main.rs  migrations.rs  seeder.rs  store.rs  utils.rs
src/services/: analyze_service.rs  export_service.rs  mod.rs  query_service.rs  tag_service.rs  task_service.rs
src/tui/: app.rs  draw.rs  mod.rs
tests/: core_flows.rs
