[package]
name = "logex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
chrono = { version = "0.4.40", default-features = true }
rusqlite = { version = "0.38.0", features = ["bundled"] }
comfy-table = "7.1.4"
ratatui = "0.29.0"
crossterm = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
shell-words = "1.1"
ctrlc = "3.4"
unicode-width = "0.2.0"
serde_json = "1.0"
